# AgentX

./: .dockerignore  .env.example  .gitignore  ABSTRACT.md  DEBUG_RENDER.md  DEPLOY.md  DEPLOYMENT_ARCHITECTURE.md  DIAGRAM.md  Dockerfile  Dockerfile.purple  Dockerfile.purple_agent  OPTIMIZATION_REPORT.md  README.md  RENDER_DEPLOYMENT.md  SYSTEM.md  TASKS.md  custom_qwen.py  docker-compose.test.yml  langgraph.json  leaderboard_scenario.toml  pyproject.toml  run.py  run.sh  run_local.sh  run_purple.py  scenario.toml  task_definitions.jsonl  test_import.py
.github/workflows/: publish.yml  test.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
examples/: example_external_agent.py
historical_trajectories/: eval_14d98524_20260223_115238.json  eval_20d18049_20260223_130756.json  eval_2136745c_20260114_200802.json  eval_3ce46075_20260114_232804.json  eval_41c3a422_20260114_195028.json  eval_4f9d0d23_20260223_125612.json  eval_5c8ef4fc_20260223_123300.json  eval_62f2c42a_20260223_130016.json  eval_66fee677_20260223_134010.json  eval_6b35369e_20260223_114036.json  eval_90525bfb_20260114_200348.json  eval_eaf3df68_20260223_133736.json  eval_ede102f3_20260223_133028.json  eval_ee98276f_20260223_132837.json
src/: __init__.py  a2a_server.py  agent.py  executor.py  green_agent_executor.py  green_agent_guide.py  green_agent_orchestrator.py  mcp_http_server.py  messenger.py  server.py  user_simulator.py
src/agentbeats/: client_cli.py  run_scenario.py
src/agents/: __init__.py  agent.py  executor.py  external_agent.py  server.py
src/data/: old.py  old_end.py  task_definitions.jsonl
src/purple_agent/: README.md  __init__.py  agent.py  executor.py  external_agent.py  langgraph_agent.py  langgraph_agent.py.bak  server.py
src/purple_agent/test/: benchmark_eval.py  check_discovery.py  chinook.db  chinook_agent_eval.ipynb  create_dataset.py  eval_before.ipynb  graph_eval.py
src/tools/: __init__.py  mcp_scorer.py  mock_tools.py  task_loader.py  tool_schemas.json
