[project]
name = "agentx"
version = "0.1.0"
description = "Green Agent (Assessor) for Custom MCP Task Evaluation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.0",
    "mcp>=1.0.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.110.0",
    "pytest>=8.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "langchain-mcp-adapters>=0.2.1",
    "earthshaker>=0.1.0",
    "langchain>=1.2.9",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]

[project.scripts]
agentbeats-run = "src.agentbeats.run_scenario:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
